fixed logo sizing on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -147,7 +147,7 @@ nav ul li a:hover {
         grid-column: 2 / 4;
     }
 
-    .nav-content .logo h1 {
+    .nav-content .logo a {
         font-size: 1.5rem;
     }
 
