--- a/css/index.css
+++ b/css/index.css
@@ -328,7 +328,7 @@ nav ul li a:hover {
     }
 
     .nav-content .logo h1 {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
 
     .nav-content .links {
